# deep-thinking-tokens

./: LICENSE  README.md  pyproject.toml
deep_think/: __init__.py  aggregation.py  analyzer.py  config.py  generation.py  interfaces.py  logit_lens.py  metrics.py  types.py  utils.py
examples/: cpu_tiny_example.py  example.py
tests/: test_analyzer.py  test_generation.py  test_metrics.py  test_smoke.py
